<resources>
    <string name="app_name">Ama</string>
    <string name="title_activity_cn__menu">CN_MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="registro">Registro</string>
    <string name="inicio">Inicio</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="dni">DNI</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="siguiente">Siguiente</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contenido">En AMA EDU! fomentamos el desarrollo integral de niños en la primera infancia a través del empoderamiento de sus padres con información, consejos y estrategias que pueden aplicar con sus hijos.</string>
    <string name="correoama">ama@amaeducation.com</string>
    <string name="paginaama">www.amaeducation.com.pe</string>
    <string name="sisol">www.sisol.gob.pe</string>
    <string name="infosalud">INFOSALUD MINSA</string>
    <string name="cunamas">Cuna Más</string>
    <string name="segurodesalud">Seguro Integral de Salud</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar</string>
    <string name="responder">Responder</string>
    <string name="volver">Volver</string>
    <string name="edaddetuhijo">¿Qué edad tiene tu hijo?</string>
    <string name="habilidadhijo">¿Qué habilidad quieres desarrollar en tu hijo?</string>
    <string name="salir">Salir</string>
    <string name="mensaje1">¡Hasta Pronto!</string>
    <string name="mensaje2">Aplica este consejo y sé parte del futuro de tus hijos</string>
    <string name="inicio2">Regresar al inicio</string>
    <string name="necesito">Necesito más ayuda</string>
</resources>
