<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cn__registro_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisajecell"
    tools:context="supercrack.sigmamoviles.com.ama.Activity.CN_RegistroUsuarioActivity">

    <include layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/include4"></include>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">


            <LinearLayout
                android:orientation="vertical"
                android:layout_height="0dp"
                tools:ignore="MissingConstraints,UselessLeaf"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content">

                <EditText
                    android:inputType="textPersonName"
                    android:background="@color/blanco_ama"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:id="@+id/editText"
                    android:layout_height="45dp"
                    android:textAlignment="center"
                    android:layout_width="300dp" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:background="@color/blanco_ama"
                    android:ems="10"
                    android:layout_marginTop="15dp"
                    android:hint="@string/apellido"
                    android:id="@+id/editText2"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:layout_marginTop="15dp"
                    android:background="@color/blanco_ama"
                    android:id="@+id/editText3"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:inputType="numberSigned"
                    android:ems="10"
                    android:hint="@string/dni"
                    android:background="@color/blanco_ama"
                    android:layout_marginTop="15dp"
                    android:id="@+id/editText4"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:hint="@string/usuario"
                    android:layout_marginTop="15dp"
                    android:background="@color/blanco_ama"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@color/blanco_ama"
                    android:hint="@string/contrasenia"
                    android:layout_marginTop="15dp"
                    android:id="@+id/editText6"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:text="@string/siguiente"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_marginEnd="16dp"
                android:background="@drawable/boton_redondo"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="160dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
