<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cn_finalizar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisajecell"
    tools:context="supercrack.sigmamoviles.com.ama.Activity.CN_FinalizarActivity">

    <include layout="@layout/tool_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/include16"></include>

    <TextView
        android:text="@string/mensaje1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        android:textColor="@color/blanco_ama"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/include16"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/mensaje2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textColor="@color/blanco_ama"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.07">

        <Button
            android:text="@string/inicio2"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cnactivityfinalizar_inicio"
            android:background="@drawable/boton_redondo"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blanco_ama"
            android:layout_width="150dp" />

        <Button
            android:text="@string/necesito"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cnactivityfinalizar_ayuda"
            android:background="@drawable/boton_redondo"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textColor="@color/blanco_ama"
            android:layout_width="150dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
