<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco_ama"
    tools:context="supercrack.sigmamoviles.com.ama.Fragment.CN_AcercaDeFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">


            <ImageView
                android:layout_width="0dp"
                app:srcCompat="@drawable/logo2"
                android:id="@+id/imageView8"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="250dp"
                tools:ignore="ContentDescription"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp" />

            <TextView
                android:text="@string/contenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAlignment="center" />

            <Button
                android:text="@string/correoama"
                android:layout_height="wrap_content"
                android:id="@+id/btn_fragmentacercade_correo"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                android:background="@drawable/boton_redondo"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="250dp"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama" />

            <Button
                android:text="@string/paginaama"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_fragmentacercade_pagina"
                android:background="@drawable/boton_redondo"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_fragmentacercade_correo"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Button
                android:text="@string/sisol"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_fragmentacercade_sisol"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_fragmentacercade_pagina"
                android:layout_marginEnd="16dp"
                android:background="@drawable/boton_redondo"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama" />

            <Button
                android:text="@string/infosalud"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_fragmentacercade_infosalud"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_redondo"
                app:layout_constraintTop_toBottomOf="@+id/btn_fragmentacercade_sisol"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama" />

            <Button
                android:text="@string/cunamas"
                android:layout_height="wrap_content"
                android:id="@+id/btn_fragmentacercade_cunamas"
                android:layout_marginTop="20dp"
                android:background="@drawable/boton_redondo"
                app:layout_constraintTop_toBottomOf="@+id/btn_fragmentacercade_infosalud"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="250dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button7"
                tools:layout_editor_absoluteY="786dp"
                tools:layout_editor_absoluteX="136dp" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
