<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cn_editar_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisajecell"
    tools:context="supercrack.sigmamoviles.com.ama.Activity.CN_EditarPerfilActivity">

    <include layout="@layout/tool_bar"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
        android:id="@+id/include7"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="141dp"
                android:layout_height="126dp"
                app:srcCompat="@drawable/masculino"
                android:id="@+id/img_activityeditarperfil_imagenperfil"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/img_activityeditarperfil_imagenperfil"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/linearLayout5">

                <EditText
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:hint="@string/usuario"
                    android:background="@color/blanco_ama"
                    android:ems="10"
                    android:maxLength="20"
                    android:id="@+id/txt_activityeditarperfil_nombre"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:inputType="textPersonName"
                    android:hint="@string/apellido"
                    android:layout_marginTop="20dp"
                    android:background="@color/blanco_ama"
                    android:ems="10"
                    android:maxLength="20"
                    android:id="@+id/txt_activityeditarperfil_apellido"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/blanco_ama"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:hint="@string/correo"
                    android:maxLength="30"
                    android:id="@+id/txt_activityeditarperfil_correo"
                    android:textAlignment="center" />

                <EditText
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/blanco_ama"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/dni"
                    android:maxLength="8"
                    android:id="@+id/txt_activityeditarperfil_dni"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:text="@string/guardar"
                android:layout_height="wrap_content"
                android:id="@+id/btn_activityeditarperfil_guardar"
                android:background="@drawable/boton_redondo"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="180dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
