<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cn__registro_sexo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisajecell"
    tools:context="supercrack.sigmamoviles.com.ama.Activity.CN_RegistroSexoActivity">

    <include layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:id="@+id/include5"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/include5"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/linearLayout3">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <RadioButton
                            android:text="@string/femenino"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:background="@color/blanco_ama"
                            android:id="@+id/radioButton12"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="18sp"
                            android:textColor="@android:color/background_dark" />

                        <RadioButton
                            android:text="@string/masculino"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:background="@color/blanco_ama"
                            android:layout_marginTop="50dp"
                            android:id="@+id/radioButton11"
                            android:layout_weight="1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="18sp"
                            android:textColor="@android:color/background_dark" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/femenino"
                        android:id="@+id/imageView15" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/masculino"
                        android:id="@+id/imageView16" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:text="@string/registrar"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:background="@drawable/boton_redondo"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="180dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                android:textColor="@color/blanco_ama" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
